# shlBot

./: graph.py  nodes.py  prompt.py  pyproject.toml  requirements.txt  schema.py  search.py  state.py  vercel.json
api/: api_schema.py  main.py  utlis.py
