[project]
name = "shlagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "load-dotenv>=0.1.0",
    "pydantic>=2.13.4",
    "rank-bm25>=0.2.2",
    "uvicorn>=0.49.0",
]
